公演予定編集

--- a/index.html
+++ b/index.html
@@ -92,6 +92,8 @@
           </div>
         </section>
 
+
+
         <!-- Other sections to be populated -->
         <section id="class" class="section-class">
           <div class="container">
@@ -159,6 +161,24 @@
         </section>
 
 
+
+        <!-- Furusato Nozei Section -->
+        <section id="furusato" class="section-furusato">
+          <div class="container">
+            <h2 class="section-title">ふるさと納税によるご支援のお願い</h2>
+            <div class="furusato-content">
+              <p>
+                和太鼓 武天では、ふるさと納税を通じたご支援を受け付けております。<br>
+                皆様からの温かいご支援は、地域文化の振興や活動の充実に役立てられます。<br>
+                返礼品もご用意しておりますので、ぜひご覧ください。
+              </p>
+              <a href="https://www.satofull.jp/products/detail.php?product_id=1605269&msockid=16d3a7f2968863e21b6db3be97f2626e"
+                class="cta-button" target="_blank" rel="noopener noreferrer">
+                ふるさと納税詳細を見る（さとふる）
+              </a>
+            </div>
+          </div>
+        </section>
 
         <section id="contact" class="section-contact">
           <div class="container">
