--- a/schedule.html
+++ b/schedule.html
@@ -67,12 +67,44 @@
           <div class="container">
             <div class="schedule-filters">
               <button class="filter-btn active">すべて</button>
+              <button class="filter-btn">2027年</button>
               <button class="filter-btn">2026年</button>
-              <button class="filter-btn">2025年</button>
             </div>
 
             <div class="detailed-schedule-list">
               <!-- Events -->
+              <article class="schedule-card">
+                <div class="schedule-date-box">
+                  <span class="year">2026</span>
+                  <span class="date">12</span>
+                  <span class="day"></span>
+                </div>
+                <div class="schedule-info">
+                  <h2 class="schedule-title">武天kids成果発表会</h2>
+                  <p class="schedule-location"><span class="icon">📍</span> ふれあいホール</p>
+                  <p class="schedule-time"><span class="icon">🕒</span> 未定</p>
+                  <p class="schedule-desc">
+                    武天kidsの成果発表会です
+                  </p>
+                </div>
+              </article>
+
+              <article class="schedule-card">
+                <div class="schedule-date-box">
+                  <span class="year">2026</span>
+                  <span class="date">05.23</span>
+                  <span class="day">Sun</span>
+                </div>
+                <div class="schedule-info">
+                  <h2 class="schedule-title">野辺</h2>
+                  <p class="schedule-location"><span class="icon">📍</span> キララホール</p>
+                  <p class="schedule-time"><span class="icon">🕒</span> 開場 13:45 / 開演 14:00</p>
+                  <p class="schedule-desc">
+                    
+                  </p>
+                </div>
+              </article>
+
               <article class="schedule-card">
                 <div class="schedule-date-box">
                   <span class="year">2026</span>
@@ -90,22 +122,6 @@
                     <img src="https://placehold.co/600x800?text=Flyer+Image" alt="武天 発表会 チラシ">
                   </div>
                   <a href="contact.html?subject=performance" class="ticket-btn">チケット予約について</a>
-                </div>
-              </article>
-
-              <article class="schedule-card past">
-                <div class="schedule-date-box">
-                  <span class="year">2025</span>
-                  <span class="date">04.27</span>
-                  <span class="day">Sun</span>
-                </div>
-                <div class="schedule-info">
-                  <h2 class="schedule-title">合同公演 「奏音」</h2>
-                  <p class="schedule-location"><span class="icon">📍</span> キララホール</p>
-                  <p class="schedule-time"><span class="icon">🕒</span> 開場 13:45 / 開演 14:00</p>
-                  <p class="schedule-desc">
-                    「野辺囃子神楽保存会」との合同公演です。ゲストに「Eriu2&6」さんをお招きして、コラボ曲も披露します。
-                  </p>
                 </div>
               </article>
               
