youtubeアイコン追加

--- a/contact.html
+++ b/contact.html
@@ -66,7 +66,7 @@
         <section class="section-contact-form">
           <div class="container">
             <p class="contact-intro">出演のご依頼、体験レッスンのお申し込み、その他ご質問など、<br class="desktop-only">お気軽にお問い合わせください。</p>
-            <br>
+
             <p style="color : #c00; font-size : 0.9rem; text-align: center;">
               このページは作成中のサイトです。実際の応募・送信は行われません。
             </p>
@@ -121,11 +121,9 @@
           <a href="https://www.facebook.com/BUTEN2008/" class="social-icon" aria-label="Facebook">
             <img src="public/Facebook_Logo_Primary.png" alt="Facebook">
           </a>
-          <!-- YouTube placeholder
-          <a href="#" class="social-icon" aria-label="YouTube">
-            <img src="public/youtube_logo.png" alt="YouTube">
+          <a href="https://www.youtube.com/channel/UCwjt1ccEZv3qjzCHLPV8tAA" class="social-icon" aria-label="YouTube">
+            <img src="public/youtube_social_icon_red.png" alt="YouTube">
           </a>
-          -->
         </div>
         <p>&copy; 2025 和太鼓 武天 -BUTEN-</p>
       </footer>
