--- a/instructors.html
+++ b/instructors.html
@@ -94,7 +94,6 @@
                 <div class="card-content">
                   <h3>栗原 政宗</h3>
                   <p class="instructor-sub">MASAMUNE KURIHARA</p>
-                  <p>紹介文</p>
                 </div>
               </div>
               <!-- Assistant 2 -->
@@ -105,7 +104,6 @@
                 <div class="card-content">
                   <h3>美村 綾香</h3>
                   <p class="instructor-sub">AYAKA MIMURA</p>
-                  <p>紹介文</p>
                 </div>
               </div>
               <!-- Assistant 3 -->
@@ -116,7 +114,6 @@
                 <div class="card-content">
                   <h3>美村 涼太</h3>
                   <p class="instructor-sub">RYOTA MIMURA</p>
-                  <p>紹介文</p>
                 </div>
               </div>
               <!-- Assistant 4 -->
@@ -127,7 +124,6 @@
                 <div class="card-content">
                   <h3>川久保 諒</h3>
                   <p class="instructor-sub">RYO KAWAKUBO</p>
-                  <p>紹介文</p>
                 </div>
               </div>
             </div>
@@ -157,11 +153,9 @@
           <a href="https://www.facebook.com/BUTEN2008/" class="social-icon" aria-label="Facebook">
             <img src="public/Facebook_Logo_Primary.png" alt="Facebook">
           </a>
-          <!-- YouTube placeholder
-          <a href="#" class="social-icon" aria-label="YouTube">
-            <img src="public/youtube_logo.png" alt="YouTube">
+          <a href="https://www.youtube.com/channel/UCwjt1ccEZv3qjzCHLPV8tAA" class="social-icon" aria-label="YouTube">
+            <img src="public/youtube_social_icon_red.png" alt="YouTube">
           </a>
-          -->
         </div>
         <p>&copy; 2025 和太鼓 武天 -BUTEN-</p>
       </footer>
