--- a/class.html
+++ b/class.html
@@ -77,7 +77,7 @@
                 <p class="description">
                   「仲間や家族と奏でる喜び」を大切に、リズム・メロディ・ハーモニーを身体全体で感じる親子クラスです。<br>
                   明るく活発な子供たちの個性を引き出しながら、礼儀や協調性といった豊かな心も育みます。<br>
-                  親子や兄弟で一緒に汗を流し、太鼓を通じて生まれる家族の絆を深めてみませんか？(サンプル文)
+                  親子や兄弟で一緒に汗を流し、太鼓を通じて生まれる家族の絆を深めてみませんか？
                 </p>
                 <div class="class-info">
                   <dl>
@@ -100,7 +100,7 @@
                 <span class="tag">対象：大人</span>
                 <p class="description">
                   基礎からしっかりと積み上げ、ただ叩くだけではない「魅せる和太鼓」を追求しています。<br>
-                  一人ひとりの個性と音色を大切にしながら、全員の呼吸を合わせて一つの音楽を創り上げる楽しさは格別です。<br>美しくしなやかなバチさばきと、心に響くハーモニーで、観る人を魅了する華やかな舞台を創り上げましょう。(サンプル文)
+                  一人ひとりの個性と音色を大切にしながら、全員の呼吸を合わせて一つの音楽を創り上げる楽しさは格別です。<br>美しくしなやかなバチさばきと、心に響くハーモニーで、観る人を魅了する華やかな舞台を創り上げましょう。
                 </p>
                 <div class="class-info">
                   <dl>
@@ -124,7 +124,7 @@
                 <p class="description">
                   指導者が長年培ってきた「和太鼓の可能性を追求する精神」を受け継ぐ、武天の次世代リーダーたちです。<br>
                   伝統を重んじつつも、既存の枠にとらわれないアグレッシブなパフォーマンスが持ち味。<br>
-                  互いに切磋琢磨し、高みを目指して技術と表現を磨き続ける、熱い情熱を持ったメンバーが集まっています。(サンプル文)
+                  互いに切磋琢磨し、高みを目指して技術と表現を磨き続ける、熱い情熱を持ったメンバーが集まっています。
                 </p>
                 <div class="class-info">
                   <dl>
@@ -162,11 +162,9 @@
           <a href="https://www.facebook.com/BUTEN2008/" class="social-icon" aria-label="Facebook">
             <img src="public/Facebook_Logo_Primary.png" alt="Facebook">
           </a>
-          <!-- YouTube placeholder
-          <a href="#" class="social-icon" aria-label="YouTube">
-            <img src="public/youtube_logo.png" alt="YouTube">
+          <a href="https://www.youtube.com/channel/UCwjt1ccEZv3qjzCHLPV8tAA" class="social-icon" aria-label="YouTube">
+            <img src="public/youtube_social_icon_red.png" alt="YouTube">
           </a>
-          -->
         </div>
         <p>&copy; 2025 和太鼓 武天 -BUTEN-</p>
       </footer>
