--- a/schedule.html
+++ b/schedule.html
@@ -152,11 +152,9 @@
           <a href="https://www.facebook.com/BUTEN2008/" class="social-icon" aria-label="Facebook">
             <img src="public/Facebook_Logo_Primary.png" alt="Facebook">
           </a>
-          <!-- YouTube placeholder
-          <a href="#" class="social-icon" aria-label="YouTube">
-            <img src="public/youtube_logo.png" alt="YouTube">
+          <a href="https://www.youtube.com/channel/UCwjt1ccEZv3qjzCHLPV8tAA" class="social-icon" aria-label="YouTube">
+            <img src="public/youtube_social_icon_red.png" alt="YouTube">
           </a>
-          -->
         </div>
         <p>&copy; 2025 和太鼓 武天 -BUTEN-</p>
       </footer>
