--- a/admission.html
+++ b/admission.html
@@ -88,7 +88,7 @@
                 <div class="step-number">03</div>
                 <div class="step-content">
                   <h3>ご説明・ご相談</h3>
-                  <p>レッスン後、教室のシステムや料金についてご説明します。ご不明点があれば何でもご質問ください。</p>
+                  <p>レッスン後、当会のシステムや会費等についてご説明します。ご不明点があれば何でもご質問ください。</p>
                 </div>
               </div>
               <div class="step-connector"></div>
