--- a/index.html
+++ b/index.html
@@ -139,13 +139,13 @@
                 <div class="schedule-date">2026.04.05</div>
                 <div class="schedule-content">
                   <h3><a href="schedule.html">武天 発表会</a></h3>
-                  <p>場所：ふれあいホール / 時間：14:00〜 17:00〜</p>
+                  <p>場所：秋川ふれあいホール / 時間：①14:00〜 ②17:00〜</p>
                 </div>
               </div>
               <div class="schedule-item">
                 <div class="schedule-date">2026.05.23</div>
                 <div class="schedule-content">
-                  <h3><a href="schedule.html">野辺</a></h3>
+                  <h3><a href="schedule.html">野辺囃子神楽保存会  主催  「芽吹き」三者合同公演</a></h3>
                   <p>場所：キララホール / 時間：14:00〜</p>
                 </div>
               </div>
@@ -153,7 +153,7 @@
                 <div class="schedule-date">2026.12.01</div>
                 <div class="schedule-content">
                   <h3><a href="schedule.html">武天 kids 成果発表会</a></h3>
-                  <p>場所：フレア五日市 / 時間：未定</p>
+                  <p>場所：秋川ふれあいホール / 時間：14:30〜</p>
                 </div>
               </div>
             </div>
