--- a/performances.html
+++ b/performances.html
@@ -200,6 +200,30 @@
 
                 <article class="performance-card">
                   <div class="performance-date">
+                    <span class="month">10月</span>
+                    <span class="day">29</span>
+                  </div>
+                  <div class="performance-content">
+                    <h3>東京太鼓ジュニアコンクール</h3>
+                    <p class="performance-venue">📍 大田区アプリコ大ホール</p>
+                    <p class="performance-desc"></p>
+                  </div>
+                </article>
+
+                <article class="performance-card">
+                  <div class="performance-date">
+                    <span class="month">8月</span>
+                    <span class="day">14</span>
+                  </div>
+                  <div class="performance-content">
+                    <h3>青梅ゆかた祭り</h3>
+                    <p class="performance-venue">📍 ネッツぐーたまセンター</p>
+                    <p class="performance-desc">青梅ゆかた祭りで和太鼓を披露しました。</p>
+                  </div>
+                </article>
+
+                <article class="performance-card">
+                  <div class="performance-date">
                     <span class="month">8月</span>
                     <span class="day">5</span>
                   </div>
@@ -219,6 +243,47 @@
                     <h3>太鼓祭り 第五回関東大会</h3>
                     <p class="performance-venue">📍 相模原市民会館ホール</p>
                     <p class="performance-desc">第五回関東大会に出演。多くの方々にご来場いただきました。</p>
+                  </div>
+                </article>
+
+                <article class="performance-card">
+                  <div class="performance-date">
+                    <span class="month">4月</span>
+                    <span class="day">1</span>
+                  </div>
+                  <div class="performance-content">
+                    <h3>秋川駅前さくら祭り</h3>
+                    <p class="performance-venue">📍 秋川駅南口</p>
+                    <p class="performance-desc">さくら祭りで和太鼓を披露しました。</p>
+                  </div>
+                </article>
+              </div>
+            </div>
+
+            <div class="year-section" data-year="2022">
+              <h2 class="year-title">2022年</h2>
+              <div class="performance-grid">
+                <article class="performance-card">
+                  <div class="performance-date">
+                    <span class="month">4月</span>
+                    <span class="day">29</span>
+                  </div>
+                  <div class="performance-content">
+                    <h3>武天15周年記念発表会</h3>
+                    <p class="performance-venue">📍 秋川キララホール</p>
+                    <p class="performance-desc">武天15周年記念発表会。/p>
+                  </div>
+                </article>
+
+                <article class="performance-card">
+                  <div class="performance-date">
+                    <span class="month">10月</span>
+                    <span class="day">30</span>
+                  </div>
+                  <div class="performance-content">
+                    <h3>秋川ハロウィンイベント</h3>
+                    <p class="performance-venue">📍 秋川駅南口</p>
+                    <p class="performance-desc">ハロウィンイベントに仮装して出演しました。</p>
                   </div>
                 </article>
               </div>
