--- a/schedule.html
+++ b/schedule.html
@@ -81,8 +81,8 @@
                 </div>
                 <div class="schedule-info">
                   <h2 class="schedule-title">武天kids成果発表会</h2>
-                  <p class="schedule-location"><span class="icon">📍</span> ふれあいホール</p>
-                  <p class="schedule-time"><span class="icon">🕒</span> 未定</p>
+                  <p class="schedule-location"><span class="icon">📍</span> 秋川ふれあいホール</p>
+                  <p class="schedule-time"><span class="icon">🕒</span> start 14:30</p>
                   <p class="schedule-desc">
                     武天kidsの成果発表会です
                   </p>
@@ -96,9 +96,9 @@
                   <span class="day">Sun</span>
                 </div>
                 <div class="schedule-info">
-                  <h2 class="schedule-title">野辺</h2>
+                  <h2 class="schedule-title">野辺囃子神楽保存会  主催「芽吹き」三者合同公演</h2>
                   <p class="schedule-location"><span class="icon">📍</span> キララホール</p>
-                  <p class="schedule-time"><span class="icon">🕒</span> 開場 13:45 / 開演 14:00</p>
+                  <p class="schedule-time"><span class="icon">🕒</span> open 13:00 / start 13:30</p>
                   <p class="schedule-desc">
                     
                   </p>
@@ -113,8 +113,9 @@
                 </div>
                 <div class="schedule-info">
                   <h2 class="schedule-title">武天 発表会</h2>
-                  <p class="schedule-location"><span class="icon">📍</span> あきる野市ふれあいホール</p>
-                  <p class="schedule-time"><span class="icon">🕒</span> 開場 13:30 / 開演 14:00</p>
+                  <p class="schedule-location"><span class="icon">📍</span> 秋川ふれあいホール</p>
+                  <p class="schedule-time"><span class="icon">🕒</span> ①open 13:30 / start 14:00</p>
+                  <p class="schedule-time"><span class="icon">🕒</span> ②open 17:00 / start 17:30</p>
                   <p class="schedule-desc">
                     武天の発表会です
                   </p>
