2024年以前公演実績追加

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                 </div>
               </div>
               <div class="schedule-item">
-                <div class="schedule-date">2026.12.01</div>
+                <div class="schedule-date">2026.12</div>
                 <div class="schedule-content">
                   <h3><a href="schedule.html">武天 kids 成果発表会</a></h3>
                   <p>場所：秋川ふれあいホール / 時間：14:30〜</p>
@@ -168,7 +168,7 @@
             <h2 class="section-title">ふるさと納税によるご支援のお願い</h2>
             <div class="furusato-content">
               <p>
-                和太鼓 武天では、ふるさと納税を通じたご支援を受け付けております。<br>
+                和太鼓 武天では、あきる野市のふるさと納税を通じたご支援を受け付けております。<br>
                 皆様からの温かいご支援は、地域文化の振興や活動の充実に役立てられます。<br>
                 返礼品もご用意しておりますので、ぜひご覧ください。
               </p>
