--- a/workshop.html
+++ b/workshop.html
@@ -108,8 +108,7 @@
                 <dd>不定期開催（下記のお知らせをご確認ください）</dd>
 
                 <dt>場所</dt>
-                <dd>あたご苑<br>
-                小川会館</dd>
+                <dd>小川会館</dd>
 
                 <dt>参加費</dt>
                 <dd>2,000円 (税込) / 1回</dd>
@@ -131,17 +130,9 @@
               </div>
             -->
                
-              <div class="news-item">
-                <span class="news-date">2026.03.24 (日)</span>
-                <h3 class="news-head">和太鼓ワークショップ</h3>
-                <p><span class="icon">📍</span>あたご苑</p>
-                <p><span class="icon">🕒</span>10:00 - 12:00</p>
-                <p>初心者向け、基礎打ちと短いフレーズの練習を行います。(サンプル文)</p>
-                <a href="contact.html?subject=workshop" class="apply-btn">申し込む</a>
-              </div>
 
               <div class="news-item">
-                <span class="news-date">2026.06.23 (日)</span>
+                <span class="news-date">2026.06.23 (火)</span>
                 <h3 class="news-head">和太鼓ワークショップ</h3>
                 <p><span class="icon">📍</span>小川会館</p>
                 <p><span class="icon">🕒</span>10:00 - 12:00</p>
