--- a/access.html
+++ b/access.html
@@ -120,7 +120,7 @@
             <img src="public/Facebook_Logo_Primary.png" alt="Facebook">
           </a>
           <a href="https://www.youtube.com/channel/UCwjt1ccEZv3qjzCHLPV8tAA" class="social-icon" aria-label="YouTube">
-            <img src="public/youtube_logo.png" alt="YouTube">
+            <img src="public/youtube_social_icon_red.png" alt="YouTube">
           </a>
         </div>
         <p>&copy; 2025 和太鼓 武天 -BUTEN-</p>
