--- a/performances.html
+++ b/performances.html
@@ -77,10 +77,19 @@
           <div class="container">
             <div class="year-filters">
               <button class="year-btn active" data-year="all">すべて</button>
+              <button class="year-btn" data-year="2026">2026年</button>
               <button class="year-btn" data-year="2025">2025年</button>
               <button class="year-btn" data-year="2024">2024年</button>
               <button class="year-btn" data-year="2023">2023年</button>
               <button class="year-btn" data-year="older">それ以前</button>
+            </div>
+
+            <!-- 2026年の実績 -->
+            <div class="year-section" data-year="2026">
+              <h2 class="year-title">2026年</h2>
+              <div class="performance-grid">
+                <!-- 随時更新 -->
+              </div>
             </div>
 
             <!-- 2025年の実績 -->
@@ -109,7 +118,7 @@
                   </div>
                   <div class="performance-content">
                     <h3>武天 発表会</h3>
-                    <p class="performance-venue">📍 ふれあいホール</p>
+                    <p class="performance-venue">📍 秋川ふれあいホール</p>
                     <p class="performance-desc">年に一度の発表会。全クラスが一堂に会し、日頃の練習成果を披露しました。</p>
                   </div>
                 </article>
@@ -139,7 +148,7 @@
                   </div>
                   <div class="performance-content">
                     <h3>武天 発表会</h3>
-                    <p class="performance-venue">📍 ふれあいホール</p>
+                    <p class="performance-venue">📍 秋川ふれあいホール</p>
                     <p class="performance-desc">全クラス参加の年次発表会。新曲も披露しました。</p>
                   </div>
                 </article>
@@ -193,7 +202,7 @@
                   </div>
                   <div class="performance-content">
                     <h3>武天 発表会</h3>
-                    <p class="performance-venue">📍 ふれあいホール</p>
+                    <p class="performance-venue">📍 秋川ふれあいホール</p>
                     <p class="performance-desc">全クラス参加の年次発表会。新曲も初披露しました。</p>
                   </div>
                 </article>
@@ -288,6 +297,88 @@
                 </article>
               </div>
             </div>
+
+            <div class="year-section" data-year="2019">
+              <h2 class="year-title">2019年</h2>
+              <div class="performance-grid">
+                <article class="performance-card">
+                  <div class="performance-date">
+                    <span class="month">10月</span>
+                    <span class="day">6</span>
+                  </div>
+                  <div class="performance-content">
+                    <h3>秋川流域青少年育成郷土芸能大会</h3>
+                    <p class="performance-venue">📍 秋川キララホール</p>
+                    <p class="performance-desc">秋川流域青少年育成郷土芸能大会。</p>
+                  </div>
+                </article>
+              </div>
+            </div>
+
+            <div class="year-section" data-year="2018">
+              <h2 class="year-title">2018年</h2>
+              <div class="performance-grid">
+                <article class="performance-card">
+                  <div class="performance-date">
+                    <span class="month">5月</span>
+                    <span class="day">27</span>
+                  </div>
+                  <div class="performance-content">
+                    <h3>青梅太鼓フェス  OTF</h3>
+                    <p class="performance-venue">📍 ゆとろぎホール</p>
+                    <p class="performance-desc">青梅太鼓フェスに出演しました。</p>
+                  </div>
+                </article>
+
+                <article class="performance-card">
+                  <div class="performance-date">
+                    <span class="month">4月</span>
+                    <span class="day">14</span>
+                  </div>
+                  <div class="performance-content">
+                    <h3>和い和い和太鼓フェスティバル</h3>
+                    <p class="performance-venue">📍 ふれあいホール</p>
+                    <p class="performance-desc">和い和い和太鼓フェスティバルに出演しました。</p>
+                  </div>
+                </article>
+              </div>
+            </div>
+
+            <div class="year-section" data-year="2017">
+              <h2 class="year-title">2017年</h2>
+              <div class="performance-grid">
+                <article class="performance-card">
+                  <div class="performance-date">
+                    <span class="month">10月</span>
+                    <span class="day">8</span>
+                  </div>
+                  <div class="performance-content">
+                    <h3>東京多摩太鼓祭り</h3>
+                    <p class="performance-venue">📍 府中の森芸術劇場どりーむホール</p>
+                    <p class="performance-desc">東京多摩太鼓祭りに出演しました。</p>
+                  </div>
+                </article>
+              </div>
+            </div>
+
+            <div class="year-section" data-year="2016">
+              <h2 class="year-title">2016年</h2>
+              <div class="performance-grid">
+                <article class="performance-card">
+                  <div class="performance-date">
+                    <span class="month">10月</span>
+                    <span class="day">6</span>
+                  </div>
+                  <div class="performance-content">
+                    <h3>日本太鼓ジュニアコンクール東京大会</h3>
+                    <p class="performance-venue">📍 日本工学院 片柳アリーナ</p>
+                    <p class="performance-desc">日本太鼓ジュニアコンクール東京大会に出場しました。</p>
+                  </div>
+                </article>
+              </div>
+            </div>
+
+            
 
             <!-- それ以前の実績 -->
             <div class="year-section" data-year="older">
