画像をs3へ移動

--- a/class.html
+++ b/class.html
@@ -32,7 +32,7 @@
       <header class="site-header">
         <div class="logo">
           <a href="index.html">
-            <img src="dist/logo_text.png" alt="和太鼓 武天 -BUTEN-">
+            <img src="https://d329zuyuc98w3u.cloudfront.net/images/home/logo_text.png" alt="和太鼓 武天 -BUTEN-">
           </a>
         </div>
         <button class="menu-toggle" aria-label="メニューを開く" aria-expanded="false">
@@ -57,7 +57,7 @@
       </header>
 
       <main>
-        <section class="page-header" style="background-image: url('public/class/class_header.jpg');">
+        <section class="page-header" style="background-image: url('https://d329zuyuc98w3u.cloudfront.net/images/class/class_header.jpg');">
           <div class="header-overlay"></div>
           <h1>クラス紹介</h1>
           <p>Class</p>
@@ -69,7 +69,7 @@
             <!-- Kids Class -->
             <div class="class-detail-card" id="kids">
               <div class="detail-image">
-                <img src="public/class/saturday.jpg" alt="キッズクラス" loading="lazy">
+                <img src="https://d329zuyuc98w3u.cloudfront.net/images/class/saturday.jpg" alt="キッズクラス" loading="lazy">
               </div>
               <div class="detail-content">
                 <h2><ruby>万九龍<rt>Bankuryu</rt></ruby></h2>
@@ -93,7 +93,7 @@
             <!-- General Class -->
             <div class="class-detail-card" id="general">
               <div class="detail-image">
-                <img src="public/class/maikatyou.jpg" alt="大人チーム" loading="lazy">
+                <img src="https://d329zuyuc98w3u.cloudfront.net/images/class/maikatyou.jpg" alt="大人チーム" loading="lazy">
               </div>
               <div class="detail-content">
                 <h2><ruby>舞華蝶<rt>Maikacho</rt></ruby></h2>
@@ -116,7 +116,7 @@
             <!-- Senior Class -->
             <div class="class-detail-card" id="junior">
               <div class="detail-image">
-                <img src="public/class/toyasya.jpg" alt="若者チーム" loading="lazy">
+                <img src="https://d329zuyuc98w3u.cloudfront.net/images/class/toyasya.jpg" alt="若者チーム" loading="lazy">
               </div>
               <div class="detail-content">
                 <h2><ruby>十夜叉<rt>Toyasha</rt></ruby></h2>
@@ -157,13 +157,13 @@
       <footer class="site-footer">
         <div class="social-links">
           <a href="https://www.instagram.com/wadaiko_buten/" class="social-icon" aria-label="Instagram">
-            <img src="public/Instagram_Glyph_Gradient.png" alt="Instagram">
+            <img src="https://d329zuyuc98w3u.cloudfront.net/images/common/Instagram_Glyph_Gradient.png" alt="Instagram">
           </a>
           <a href="https://www.facebook.com/BUTEN2008/" class="social-icon" aria-label="Facebook">
-            <img src="public/Facebook_Logo_Primary.png" alt="Facebook">
+            <img src="https://d329zuyuc98w3u.cloudfront.net/images/common/Facebook_Logo_Primary.png" alt="Facebook">
           </a>
           <a href="https://www.youtube.com/channel/UCwjt1ccEZv3qjzCHLPV8tAA" class="social-icon" aria-label="YouTube">
-            <img src="public/youtube_social_icon_red.png" alt="YouTube">
+            <img src="https://d329zuyuc98w3u.cloudfront.net/images/common/youtube_social_icon_red.png" alt="YouTube">
           </a>
         </div>
         <p>&copy; 2025 和太鼓 武天 -BUTEN-</p>
