--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div id="app">
       <header class="site-header">
         <div class="logo">
-          <img src="public/home/logo_text.png">
+          <img src="https://d329zuyuc98w3u.cloudfront.net/images/home/logo_text.png">
         </div>
         <button class="menu-toggle" aria-label="メニューを開く" aria-expanded="false">
           <span class="bar"></span>
@@ -58,18 +58,18 @@
       <main>
         <section id="hero" class="hero">
           <div class="hero-slides">
-            <div class="slide active" style="background-image: url('dist/slideshow/slideshow1.jpg')"></div>
-            <div class="slide" style="background-image: url('public/slideshow/slideshow2.jpg')"></div>
-            <div class="slide" style="background-image: url('dist/slideshow/slideshow3.jpeg')"></div>
-            <div class="slide" style="background-image: url('dist/slideshow/slideshow4.jpg')"></div>
-            <div class="slide" style="background-image: url('dist/slideshow/slideshow5.jpg')"></div>
-            <div class="slide" style="background-image: url('dist/slideshow/slideshow6.jpg')"></div>
-            <div class="slide" style="background-image: url('dist/slideshow/slideshow7.png')"></div>
-            <div class="slide" style="background-image: url('dist/slideshow/slideshow8.jpg')"></div>
-            <div class="slide" style="background-image: url('dist/slideshow/slideshow10.jpg')"></div>
-            <div class="slide" style="background-image: url('dist/slideshow/slideshow11.jpg')"></div>
-            <div class="slide" style="background-image: url('dist/slideshow/slideshow12.jpg')"></div>
-            <div class="slide" style="background-image: url('dist/slideshow/slideshow13.jpg')"></div>
+            <div class="slide active" style="background-image: url('https://d329zuyuc98w3u.cloudfront.net/images/slideshow/slideshow1.jpg')"></div>
+            <div class="slide" style="background-image: url('https://d329zuyuc98w3u.cloudfront.net/images/slideshow/slideshow2.jpg')"></div>
+            <div class="slide" style="background-image: url('https://d329zuyuc98w3u.cloudfront.net/images/slideshow/slideshow3.jpeg')"></div>
+            <div class="slide" style="background-image: url('https://d329zuyuc98w3u.cloudfront.net/images/slideshow/slideshow4.jpg')"></div>
+            <div class="slide" style="background-image: url('https://d329zuyuc98w3u.cloudfront.net/images/slideshow/slideshow5.jpg')"></div>
+            <div class="slide" style="background-image: url('https://d329zuyuc98w3u.cloudfront.net/images/slideshow/slideshow6.jpg')"></div>
+            <div class="slide" style="background-image: url('https://d329zuyuc98w3u.cloudfront.net/images/slideshow/slideshow7.png')"></div>
+            <div class="slide" style="background-image: url('https://d329zuyuc98w3u.cloudfront.net/images/slideshow/slideshow8.jpg')"></div>
+            <div class="slide" style="background-image: url('https://d329zuyuc98w3u.cloudfront.net/images/slideshow/slideshow10.jpg')"></div>
+          <!-- <div class="slide" style="background-image: url('https://d329zuyuc98w3u.cloudfront.net/images/slideshow/slideshow11.jpg')"></div>
+            <div class="slide" style="background-image: url('https://d329zuyuc98w3u.cloudfront.net/images/slideshow/slideshow12.jpg')"></div> -->
+            <div class="slide" style="background-image: url('https://d329zuyuc98w3u.cloudfront.net/images/slideshow/slideshow13.jpg')"></div>
           </div>
           <div class="hero-content">
             <h1>心に響く、<br />日本の音。</h1>
@@ -101,7 +101,7 @@
             <div class="class-grid">
               <div class="class-card">
                 <div class="card-image">
-                  <img src="public/home/saturday.jpg" alt="子供たちが笑顔で太鼓を叩いている様子" loading="lazy">
+                  <img src="https://d329zuyuc98w3u.cloudfront.net/images/home/saturday.jpg" alt="子供たちが笑顔で太鼓を叩いている様子" loading="lazy">
                 </div>
                 <div class="card-content">
                   <h3><a href="class.html#kids"><ruby>万九龍<rt>Bankuryu</rt></ruby></a></h3>
@@ -110,7 +110,7 @@
               </div>
               <div class="class-card">
                 <div class="card-image">
-                  <img src="public/home/maikacho2.jpg" alt="華やかな和太鼓の演奏" loading="lazy">
+                  <img src="https://d329zuyuc98w3u.cloudfront.net/images/home/maikacho2.jpg" alt="華やかな和太鼓の演奏" loading="lazy">
                 </div>
                 <div class="card-content">
                   <h3><a href="class.html#general"><ruby>舞華蝶<rt>Maikacho</rt></ruby></a></h3>
@@ -119,7 +119,7 @@
               </div>
               <div class="class-card">
                 <div class="card-image">
-                  <img src="public/home/to-yasya.jpg" alt="若者チーム" loading="lazy">
+                  <img src="https://d329zuyuc98w3u.cloudfront.net/images/home/to-yasya.jpg" alt="若者チーム" loading="lazy">
                 </div>
                 <div class="card-content">
                   <h3><a href="class.html#junior"><ruby>十夜叉<rt>Toyasha</rt></ruby></a></h3>
@@ -199,13 +199,13 @@
       <footer class="site-footer">
         <div class="social-links">
           <a href="https://www.instagram.com/wadaiko_buten/" class="social-icon" aria-label="Instagram">
-            <img src="public/Instagram_Glyph_Gradient.png" alt="Instagram">
+            <img src="https://d329zuyuc98w3u.cloudfront.net/images/common/Instagram_Glyph_Gradient.png" alt="Instagram">
           </a>
           <a href="https://www.facebook.com/BUTEN2008/" class="social-icon" aria-label="Facebook">
-            <img src="public/Facebook_Logo_Primary.png" alt="Facebook">
+            <img src="https://d329zuyuc98w3u.cloudfront.net/images/common/Facebook_Logo_Primary.png" alt="Facebook">
           </a>
           <a href="https://www.youtube.com/channel/UCwjt1ccEZv3qjzCHLPV8tAA" class="social-icon" aria-label="YouTube">
-            <img src="public/youtube_social_icon_red.png" alt="YouTube">
+            <img src="https://d329zuyuc98w3u.cloudfront.net/images/common/youtube_social_icon_red.png" alt="YouTube">
           </a>
         </div>
         <p>&copy; 2025 和太鼓 武天 -BUTEN-</p>
