--- a/instructors.html
+++ b/instructors.html
@@ -32,7 +32,7 @@
       <header class="site-header">
         <div class="logo">
           <a href="index.html">
-            <img src="dist/logo_text.png" alt="和太鼓 武天 -BUTEN-">
+            <img src="https://d329zuyuc98w3u.cloudfront.net/images/home/logo_text.png" alt="和太鼓 武天 -BUTEN-">
           </a>
         </div>
         <button class="menu-toggle" aria-label="メニューを開く" aria-expanded="false">
@@ -57,7 +57,7 @@
       </header>
 
       <main>
-        <section class="page-header" style="background-image: url('public/instructors/instructor_header.jpg');">
+        <section class="page-header" style="background-image: url('https://d329zuyuc98w3u.cloudfront.net/images/instructors/instructor_header.jpg');">
           <div class="header-overlay"></div>
           <h1>講師紹介</h1>
           <p>Instructors</p>
@@ -69,7 +69,7 @@
             <!-- Main Instructor -->
             <div class="instructor-main-card">
               <div class="instructor-image">
-                <img src="public/instructors/kiyomi.jpg" alt="代表講師">
+                <img src="https://d329zuyuc98w3u.cloudfront.net/images/instructors/kiyomi.jpg" alt="代表講師">
               </div>
               <div class="instructor-content">
                 <h2>指導者 <span class="name">栗原 清美</span></h2>
@@ -89,7 +89,7 @@
               <!-- Assistant 1 -->
               <div class="instructor-card">
                 <div class="instructor-card-image masamune">
-                  <img src="public/instructors/masamune.jpg" alt="指導員 栗原">
+                  <img src="https://d329zuyuc98w3u.cloudfront.net/images/instructors/masamune.jpg" alt="指導員 栗原">
                 </div>
                 <div class="card-content">
                   <h3>栗原 政宗</h3>
@@ -99,7 +99,7 @@
               <!-- Assistant 2 -->
               <div class="instructor-card">
                 <div class="instructor-card-image ayaka">
-                  <img src="public/instructors/a_mimura.jpg" alt="指導員 美村">
+                  <img src="https://d329zuyuc98w3u.cloudfront.net/images/instructors/a_mimura.jpg" alt="指導員 美村">
                 </div>
                 <div class="card-content">
                   <h3>美村 綾香</h3>
@@ -109,7 +109,7 @@
               <!-- Assistant 3 -->
               <div class="instructor-card">
                 <div class="instructor-card-image ryota">
-                  <img src="public/instructors/r_mimura.jpg" alt="指導員 美村">
+                  <img src="https://d329zuyuc98w3u.cloudfront.net/images/instructors/r_mimura.jpg" alt="指導員 美村">
                 </div>
                 <div class="card-content">
                   <h3>美村 涼太</h3>
@@ -119,7 +119,7 @@
               <!-- Assistant 4 -->
               <div class="instructor-card">
                 <div class="instructor-card-image">
-                  <img src="public/instructors/kawakubo.jpg" alt="指導員 川久保">
+                  <img src="https://d329zuyuc98w3u.cloudfront.net/images/instructors/kawakubo.jpg" alt="指導員 川久保">
                 </div>
                 <div class="card-content">
                   <h3>川久保 諒</h3>
@@ -148,13 +148,13 @@
       <footer class="site-footer">
         <div class="social-links">
           <a href="https://www.instagram.com/wadaiko_buten/" class="social-icon" aria-label="Instagram">
-            <img src="public/Instagram_Glyph_Gradient.png" alt="Instagram">
+            <img src="https://d329zuyuc98w3u.cloudfront.net/images/common/Instagram_Glyph_Gradient.png" alt="Instagram">
           </a>
           <a href="https://www.facebook.com/BUTEN2008/" class="social-icon" aria-label="Facebook">
-            <img src="public/Facebook_Logo_Primary.png" alt="Facebook">
+            <img src="https://d329zuyuc98w3u.cloudfront.net/images/common/Facebook_Logo_Primary.png" alt="Facebook">
           </a>
           <a href="https://www.youtube.com/channel/UCwjt1ccEZv3qjzCHLPV8tAA" class="social-icon" aria-label="YouTube">
-            <img src="public/youtube_social_icon_red.png" alt="YouTube">
+            <img src="https://d329zuyuc98w3u.cloudfront.net/images/common/youtube_social_icon_red.png" alt="YouTube">
           </a>
         </div>
         <p>&copy; 2025 和太鼓 武天 -BUTEN-</p>
