--- a/performances.html
+++ b/performances.html
@@ -32,7 +32,7 @@
       <header class="site-header">
         <div class="logo">
           <a href="index.html">
-            <img src="dist/logo_text.png" alt="和太鼓 武天 -BUTEN-">
+            <img src="https://d329zuyuc98w3u.cloudfront.net/images/home/logo_text.png" alt="和太鼓 武天 -BUTEN-">
           </a>
         </div>
         <button class="menu-toggle" aria-label="メニューを開く" aria-expanded="false">
@@ -57,7 +57,7 @@
       </header>
 
       <main>
-        <section class="page-header" style="background-image: url('public/performance/performance_header.jpg');">
+        <section class="page-header" style="background-image: url('https://d329zuyuc98w3u.cloudfront.net/images/performance/performance_header.jpg');">
           <div class="header-overlay"></div>
           <h1>公演実績</h1>
           <p>Performance History</p>
@@ -106,7 +106,7 @@
                     <p class="performance-venue">📍 キララホール</p>
                     <p class="performance-desc">野辺囃子神楽保存会との合同公演。ゲストにEriu2&6さんをお招きし、コラボ曲も披露しました。</p>
                     <div class="flyer-image">
-                      <img src="public/performance/kanade.jpg" alt="合同公演 奏音 チラシ">
+                      <img src="https://d329zuyuc98w3u.cloudfront.net/images/performance/kanade.jpg" alt="合同公演 奏音 チラシ">
                     </div>
                   </div>
                 </article>
@@ -452,13 +452,13 @@
       <footer class="site-footer">
         <div class="social-links">
           <a href="https://www.instagram.com/wadaiko_buten/" class="social-icon" aria-label="Instagram">
-            <img src="public/Instagram_Glyph_Gradient.png" alt="Instagram">
+            <img src="https://d329zuyuc98w3u.cloudfront.net/images/common/Instagram_Glyph_Gradient.png" alt="Instagram">
           </a>
           <a href="https://www.facebook.com/BUTEN2008/" class="social-icon" aria-label="Facebook">
-            <img src="public/Facebook_Logo_Primary.png" alt="Facebook">
+            <img src="https://d329zuyuc98w3u.cloudfront.net/images/common/Facebook_Logo_Primary.png" alt="Facebook">
           </a>
           <a href="https://www.youtube.com/channel/UCwjt1ccEZv3qjzCHLPV8tAA" class="social-icon" aria-label="YouTube">
-            <img src="public/youtube_social_icon_red.png" alt="YouTube">
+            <img src="https://d329zuyuc98w3u.cloudfront.net/images/common/youtube_social_icon_red.png" alt="YouTube">
           </a>
         </div>
         <p>&copy; 2025 和太鼓 武天 -BUTEN-</p>
