--- a/workshop.html
+++ b/workshop.html
@@ -136,7 +136,34 @@
                 <h3 class="news-head">和太鼓ワークショップ</h3>
                 <p><span class="icon">📍</span>小川会館</p>
                 <p><span class="icon">🕒</span>10:00 - 12:00</p>
-                <p>初心者向け、基礎打ちと短いフレーズの練習を行います。(サンプル文)</p>
+                <p>初心者向け、基礎打ちと簡単なフレーズの曲打ちの練習ができます。</p>
+                <a href="contact.html?subject=workshop" class="apply-btn">申し込む</a>
+              </div>
+
+              <div class="news-item">
+                <span class="news-date">2026.08.18 (火)</span>
+                <h3 class="news-head">和太鼓ワークショップ</h3>
+                <p><span class="icon">📍</span>小川会館</p>
+                <p><span class="icon">🕒</span>10:00 - 12:00</p>
+                <p>初心者向け、基礎打ちと簡単なフレーズの曲打ちの練習ができます。</p>
+                <a href="contact.html?subject=workshop" class="apply-btn">申し込む</a>
+              </div>
+
+              <div class="news-item">
+                <span class="news-date">2026.10.27 (火)</span>
+                <h3 class="news-head">和太鼓ワークショップ</h3>
+                <p><span class="icon">📍</span>小川会館</p>
+                <p><span class="icon">🕒</span>10:00 - 12:00</p>
+                <p>初心者向け、基礎打ちと簡単なフレーズの曲打ちの練習ができます。</p>
+                <a href="contact.html?subject=workshop" class="apply-btn">申し込む</a>
+              </div>
+
+              <div class="news-item">
+                <span class="news-date">2026.12.15 (火)</span>
+                <h3 class="news-head">和太鼓ワークショップ</h3>
+                <p><span class="icon">📍</span>小川会館</p>
+                <p><span class="icon">🕒</span>10:00 - 12:00</p>
+                <p>初心者向け、基礎打ちと簡単なフレーズの曲打ちの練習ができます。</p>
                 <a href="contact.html?subject=workshop" class="apply-btn">申し込む</a>
               </div>
               
