武天の日常ページ追加

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
             <li><a href="admission.html">入会案内</a></li>
             <li><a href="schedule.html">公演予定</a></li>
             <li><a href="performances.html">公演実績</a></li>
+            <li><a href="gallery.html">武天の日常</a></li>
             <li><a href="workshop.html">ワークショップ</a></li>
             <li><a href="access.html">アクセス</a></li>
             <li><a href="contact.html">お問い合わせ</a></li>
@@ -89,6 +90,25 @@
               持ち曲は全て独自で作曲、振り付け、曲の変化を楽しむ創作和太鼓です。<br>
               見てくださる方々の心に響く音を目指し、地域との繋がりを大切に活動の場を広げています。
             </p>
+          </div>
+        </section>
+
+        <section id="atmosphere" class="section-atmosphere">
+          <div class="container">
+            <h2 class="section-title">武天の日常</h2>
+            <div class="atmosphere-content">
+              <div class="atmosphere-image">
+                <img src="./public/images/gallery/practice.png" alt="みんなで楽しく練習中" loading="lazy">
+              </div>
+              <div class="atmosphere-text">
+                <p>
+                  武天の魅力は、舞台でのかっこいい演奏だけではありません。<br>
+                  普段の練習は笑顔が絶えない、とてもアットホームな雰囲気です。<br>
+                  子供から大人まで、仲間と一緒に太鼓を叩く楽しさを感じています。
+                </p>
+                <a href="gallery.html" class="cta-button" style="margin-top: 1rem;">武天の日常をもっと見る</a>
+              </div>
+            </div>
           </div>
         </section>
 
