--- a/schedule.html
+++ b/schedule.html
@@ -49,6 +49,7 @@
             <li><a href="admission.html">入会案内</a></li>
             <li><a href="schedule.html" class="active">公演予定</a></li>
             <li><a href="performances.html">公演実績</a></li>
+            <li><a href="gallery.html">武天の日常</a></li>
             <li><a href="workshop.html">ワークショップ</a></li>
             <li><a href="access.html">アクセス</a></li>
             <li><a href="contact.html">お問い合わせ</a></li>
@@ -89,7 +90,7 @@
                     武天の発表会です
                   </p>
                   <div class="flyer-image">
-                    <img src="https://placehold.co/600x800?text=Flyer+Image" alt="武天 発表会 チラシ">
+                    <img src="https://d329zuyuc98w3u.cloudfront.net/images/schedule/happyoukai2026.jpg" alt="武天 発表会 チラシ">
                   </div>
                   <a href="contact.html?subject=performance" class="ticket-btn">チケット予約について</a>
                 </div>
