--- a/workshop.html
+++ b/workshop.html
@@ -49,6 +49,7 @@
             <li><a href="admission.html">入会案内</a></li>
             <li><a href="schedule.html">公演予定</a></li>
             <li><a href="performances.html">公演実績</a></li>
+            <li><a href="gallery.html">武天の日常</a></li>
             <li><a href="workshop.html" class="active">ワークショップ</a></li>
             <li><a href="access.html">アクセス</a></li>
             <li><a href="contact.html">お問い合わせ</a></li>
